# rust-color-cycle-sdl

./: .gitignore  Cargo.toml  README.md  convert.js  input_test.py
src/: bitvec.rs  color.rs  error.rs  ilbm.rs  image.rs  image_to_ansi.rs  living_world.rs  main.rs  palette.rs  read.rs  world.rs
src/image/: cycle_image.rs  indexed_image.rs  living_world.rs  mod.rs  rgb_image.rs
