[package]
name = "color-cycle-sdl"
authors = ["Mathias Panzenböck"]
description = "Render color cycle images using sdl3."
version = "0.1.0"
edition = "2021"
repository = "https://github.com/panzi/rust-color-cycle/"
license = "GPL-3.0"

[dependencies]
clap = { version = "4.5.24", features = ["derive"] }
sdl3 = { version = "0.14.11" }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"

[target.'cfg(not(windows))'.dependencies]
libc = "0.2.169"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["sysinfoapi"] }
